# offset-cookbook-mode

./: Cargo.toml  LICENSE-MIT  README.md
.cargo/: config.toml
.github/workflows/: rust.yml
benches/: aead.rs
src/: lib.rs  ocb3.rs  ocb3_ctx.rs  util.rs
tests/: kats.rs
