[package]
name = "offset-cookbook-mode"
version = "0.0.0"
edition = "2021"
exclude = ["assets/*"]

[dependencies]
aead = "0.5"
aes = "0.8"
blake2 = "0.10.6"
cipher = "0.4"
subtle = "2.4"
zeroize = "1.5.7"

[dev-dependencies]
criterion = "0.4"
getrandom = "0.2"
ring = "0.16"
hex-literal = "0.3"
aes-gcm = "0.10"

[[bench]]
name = "aead"
harness = false
